# dotObj-parser

./: .generate-dir-locals.sh  .gitignore  CMakeLists.txt  README.md  build.sh  generateVSProject.bat  run.sh
out3d/: index.html
out3d/js/: renderObjFile.js  setup-scene.js
src/: MtlFileParser.h  ObjDatabase.cpp  ObjDatabase.h  ObjEntity.h  ObjEntityFace.cpp  ObjEntityFace.h  ObjEntityGroup.cpp  ObjEntityGroup.h  ObjFileParser.cpp  ObjFileParser.h  ObjGroup.h  StringUtils.cpp  Types.h  Utils.h  WithVerticesIndices.h  main.cpp
src/libobjparser/include/: ObjDatabase.h  ObjEntity.h  ObjEntityFace.h  ObjEntityGroup.h  ObjEntityVertex.h  ObjMaterial.h  Types.h  VertexBasedEntity.h
src/libobjparser/src/: ObjEntityFace.cpp
tests/: CMakeLists.txt  FacesTests.cpp  GroupsTests.cpp  main.cpp
tests/models/Bell407/: bell407-1.mtl
tests/models/Horse/: horse.mtl
tests/models/LCAC/: LCAC Alpha.tga  LCAC glass.tga  LCAC-27.mtl  LCAC1.tga  LCAC2.tga  LCAC3.tga  LCAC4.tga
tests/models/Pig/: pig.mtl
tests/models/Y-Wing/: y-wing.mtl
tests/models/keyboard/: keyboard.mtl
